# go

./: WORKSPACE  go.mod  go.sum
protos/hello/: BUILD.bazel
services/hello/: BUILD.bazel
services/hello/server/: BUILD.bazel  server.go  server_test.go
