load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["main.go"],
    importpath = "github.com/nikunjy/go/services/hello",
    visibility = ["//visibility:private"],
    deps = [
        "//protos/hello:go_default_library",
        "//services/hello/server:go_default_library",
        "@com_github_jessevdk_go_flags//:go_default_library",
        "@org_golang_google_grpc//:go_default_library",
    ],
)

go_binary(
    name = "hello",
    embed = [":go_default_library"],
    visibility = ["//visibility:public"],
)
